# diary-app

./: README.md  docker-compose.yml
backend/: .env.template  Dockerfile  pyproject.toml  requirements.txt
backend/src/app/: main.py
backend/src/models/: __init__.py  diary_entry.py
frontend/: Dockerfile
frontend/src/: index.html
